<resources>
    <string name="app_name">SqlDb</string>
    <string name="username"> MailId</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="student_name">Enter Student Name</string>
    <string name="text_studentname">Student Name:</string>
    <string name="roll_no">Enter Student Roll no</string>
    <string name="text_roll_no">Roll No:</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="text_gender">Gender :</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_department">Department :</string>
    <string name="department">Enter Department Name</string>
    <string name="text_email">Email :</string>
    <string name="email">Enter Year of the course</string>
    <string name="text_password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="text_confirm_password">Confirm Password:</string>
    <string name="text_upload_image">Upload Image:</string>
    <string name="uploadBTN">Upload</string>
    <string name="add_detialsBTN">Add Details</string>
    <string name="text_student_name">Name:</string>
    <string name="textview1">TextView</string>
    <string name="text_studentroll_no">Rollno:</string>
    <string name="textview2">TextView</string>
    <string name="text_date_of_birth">DOB:</string>
    <string name="textview3">TextView</string>
    <string name="text_student_gender">Gender:</string>
    <string name="textview4">TextView</string>
    <string name="text_student_email">Email:</string>
    <string name="textview5">TextView</string>
    <string name="textview6">TextView</string>
    <string name="text_student_department">Dept:</string>
    <string name="logout">Logout</string>
</resources>