<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowData"
    android:orientation="vertical"
    android:background="@drawable/img_backround1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp">
            <TextView
                android:text="@string/text_student_name"
                android:layout_width="100dp"
                android:background="#000000"
                android:textColor="#ffffff"
                android:layout_height="match_parent" android:textSize="24sp" android:layout_weight="0"/>
            <TextView
                android:text="@string/textview1"
                android:layout_width="match_parent"
                android:background="#000000"
                android:textColor="#ffffff"
                android:layout_height="wrap_content" android:textSize="24sp"
                android:layout_weight="1" android:id="@+id/studetnname"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="0">
            <TextView
                android:text="@string/text_studentroll_no"
                android:layout_width="100dp"
                android:background="#000000"
                android:textColor="#ffffff"
                android:layout_height="match_parent" android:textSize="24sp" android:layout_weight="0"/>
            <TextView
                android:text="@string/textview2"
                android:layout_width="match_parent"
                android:background="#000000"
                android:textColor="#ffffff"
                android:layout_height="wrap_content" android:id="@+id/studentrollno" android:textSize="24sp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="0">
            <TextView
                android:text="@string/text_date_of_birth"
                android:layout_width="100dp"
                android:background="#000000"
                android:textColor="#ffffff"
                android:layout_height="match_parent" android:textSize="24sp" android:layout_weight="0"/>
            <TextView
                android:text="@string/textview3"
                android:layout_width="match_parent"
                android:background="#000000"
                android:textColor="#ffffff"
                android:layout_height="wrap_content" android:textSize="24sp"
                android:layout_weight="1" android:id="@+id/studentdob"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/text_student_gender"
                android:layout_width="100dp"
                android:background="#000000"
                android:textColor="#ffffff"
                android:layout_height="match_parent" android:textSize="24sp" android:layout_weight="0"
                />
            <TextView
                android:text="@string/textview4"
                android:layout_width="match_parent"
                android:background="#000000"
                android:textColor="#ffffff"
                android:layout_height="wrap_content" android:textSize="24sp"
                android:layout_weight="1" android:id="@+id/studentgender"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="0">
            <TextView
                android:text="@string/text_student_email"
                android:layout_width="100dp"
                android:background="#000000"
                android:textColor="#ffffff"
                android:layout_height="match_parent" android:textSize="24sp" android:layout_weight="0"
                />
            <TextView
                android:text="@string/textview5"
                android:layout_width="match_parent"
                android:background="#000000"
                android:textColor="#ffffff"
                android:layout_height="wrap_content" android:textSize="24sp"
                android:layout_weight="1" android:id="@+id/studentemail"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_weight="0">
        <TextView
            android:text="@string/text_student_department"
            android:layout_width="100dp"
            android:background="#000000"
            android:textColor="#ffffff"
            android:layout_height="match_parent" android:textSize="24sp" android:layout_weight="0"
            />
        <TextView
            android:text="@string/textview6"
            android:layout_width="match_parent"
            android:background="#000000"
            android:textColor="#ffffff"
            android:layout_height="wrap_content" android:textSize="24sp"
            android:layout_weight="1" android:id="@+id/studentdepart"/>
    </LinearLayout>
    <Button
        android:text="@string/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/back"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars" android:id="@+id/profile"/>




</LinearLayout>