<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:background="@drawable/img_backround1">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">
                <TextView
                    android:text="@string/text_student_name"
                    android:layout_width="wrap_content"
                    android:background="#000000"
                    android:textColor="#ffffff"
                    android:layout_height="match_parent" android:layout_weight="0"
                    android:gravity="center" android:layout_margin="10dp" android:textSize="18sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#ffffff"
                    android:layout_margin="10dp"
                    android:hint="@string/student_name" android:layout_weight="1" android:inputType="textPersonName"
                    android:id="@+id/Studentname"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="0">
                <TextView
                    android:text="@string/text_roll_no"
                    android:layout_width="118dp"
                    android:layout_height="match_parent"
                    android:background="#000000"
                    android:textColor="#ffffff"
                    android:gravity="center" android:layout_margin="10dp" android:textSize="18sp"/>
                <EditText
                    android:id="@+id/Rollno"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:background="#ffffff"
                    android:hint="@string/roll_no" android:inputType="number"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="0">
                <TextView
                    android:text="@string/date_of_birth"
                    android:layout_width="125dp"
                    android:layout_height="match_parent"
                    android:background="#000000"
                    android:textColor="#ffffff"
                    android:gravity="center" android:layout_margin="10dp" android:textSize="18sp"/>
                <DatePicker android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:datePickerMode="spinner" android:calendarViewShown="false" android:id="@+id/DOB"/>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="0"
                android:layout_marginTop="10dp">
                <TextView
                    android:text="@string/text_gender"
                    android:layout_width="122dp"
                    android:layout_height="match_parent"
                    android:background="#000000"
                    android:textColor="#ffffff"
                    android:gravity="center" android:layout_margin="10dp" android:textSize="18sp"/>
                <RadioGroup android:layout_width="wrap_content" android:layout_height="40dp"
                    android:orientation="horizontal" android:id="@+id/Gender">
                    <RadioButton
                        android:text="@string/text_male"
                        android:layout_width="match_parent"
                        android:background="#000000"
                        android:textColor="#ffffff"
                        android:layout_height="40dp" android:id="@+id/Male"/>
                    <RadioButton
                        android:text="@string/text_female"
                        android:layout_width="wrap_content"
                        android:background="#000000"
                        android:textColor="#ffffff"
                        android:layout_height="40dp" android:id="@+id/Female"/>
                </RadioGroup>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="0">
                <TextView
                    android:text="@string/text_department"
                    android:layout_width="115dp"
                    android:layout_height="match_parent"
                    android:background="#000000"
                    android:textColor="#ffffff"
                    android:gravity="center" android:layout_margin="10dp" android:textSize="18sp"/>
                <EditText
                    android:id="@+id/Dept"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#ffffff"
                    android:layout_margin="10dp"
                    android:hint="@string/department" android:inputType="text"/>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="0">
                <TextView
                    android:text="@string/text_email"
                    android:layout_width="115dp"
                    android:layout_height="match_parent"
                    android:background="#000000"
                    android:textColor="#ffffff"
                    android:gravity="center" android:layout_margin="10dp" android:textSize="18sp"/>
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:background="#ffffff"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="0">
                <TextView
                    android:text="@string/text_password"
                    android:layout_width="115dp"
                    android:background="#000000"
                    android:textColor="#ffffff"
                    android:layout_height="match_parent" android:layout_weight="0"
                    android:gravity="center" android:layout_margin="10dp" android:textSize="18sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:background="#ffffff"
                    android:hint="@string/enter_password" android:layout_weight="1" android:inputType="textPassword"
                    android:id="@+id/Password"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="0">
                <TextView
                    android:text="@string/text_confirm_password"
                    android:layout_width="115dp"
                    android:background="#000000"
                    android:textColor="#ffffff"
                    android:layout_height="match_parent" android:layout_weight="0"
                    android:gravity="center" android:layout_margin="10dp" android:textSize="18sp"/>
                <EditText
                    android:id="@+id/Confirmpass"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:background="#ffffff"
                    android:hint="@string/confirm_password" android:layout_weight="1" android:inputType="textPassword"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="0">
                <TextView
                    android:text="@string/text_upload_image"
                    android:layout_width="120dp"
                    android:background="#000000"
                    android:textColor="#ffffff"
                    android:layout_height="match_parent" android:layout_weight="0"
                    android:gravity="center" android:layout_margin="10dp" android:textSize="18sp"/>
                <Button
                    android:text="@string/uploadBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/upload" android:layout_weight="0"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
                android:id="@+id/imageView"/>
            <Button
                android:id="@+id/idBtnAddinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/add_detialsBTN"
                android:textAllCaps="false"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>